@@ -6,6 +6,6 @@
 [subrepo]
 	remote = git://github.com/p6-pdf/PDF-p6.git
 	branch = master
-	commit = 4548e993ea07f0cac057169406aff1ce97aa8444
-	parent = e7a26c018beae5b1acb826fef9bbc26796715ddd
+	commit = db22b45631c4447058b889e9c497608c035d6eda
+	parent = 38a8ae8a6edb0a5eb950a9d441bf07303ca94633
 	cmdver = 0.4.0
